--- a/web/index.html
+++ b/web/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Game</title>
     <link rel="stylesheet" href="style.css">
-    <script src="three.js"></script>
+    <script src="engine/three.js"></script>
+    <script src="engine/stats.js"></script>
     <script src="game.js"></script>
     <script src="websocket.js"></script>
 </head>
@@ -15,6 +16,9 @@
         let game = new Game();
         let ws = new Websocket(game);
     </script>
+    <div id="statsFps"></div>
+    <div id="statsMs"></div>
+    <div id="statsmMb"></div>
     <div id="leaderBoard">
         <h4>Players</h4>
         <table>
