--- a/web/index.html
+++ b/web/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Game</title>
+    <title>cubegame</title>
     <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="style.css">
     <script src="engine/three.js"></script>
