--- a/web/index.html
+++ b/web/index.html
@@ -6,7 +6,7 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>cubegame</title>
-    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="favicon.png">
     <link rel="stylesheet" href="style.css">
     <script src="engine/three.js"></script>
     <script src="engine/stats.js"></script>
