--- a/web/index.html
+++ b/web/index.html
@@ -9,6 +9,7 @@
     <link rel="icon" href="favicon.png">
     <link rel="stylesheet" href="style.css">
     <script src="engine/three.js"></script>
+    <script src="engine/water.js"></script>
     <script src="engine/stats.js"></script>
     <script src="game.js"></script>
     <script src="websocket.js"></script>
