--- a/web/index.html
+++ b/web/index.html
@@ -15,20 +15,11 @@
     <script src="websocket.js"></script>
 </head>
 <body>
-    <div id="stats">
-        <div></div>
-        <div></div>
-        <div></div>
-    </div>
-    <div id="leaderBoard">
-        <h4>Players</h4>
-        <table>
-        </table>
-    </div>
-    <div id="crosshair"></div>
     <script>
-        let game = new Game();
-        let ws = new Websocket();
+        window.game = new Game();
+        window.game.doneLoading = () => {
+            window.ws = new Websocket();
+        }
     </script>
 </body>
 </html>
