--- a/web/main/index.html
+++ b/web/main/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-    <meta charset="UTF-8">
+    <!-- <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="mobile-web-app-capable" content="yes">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge"> -->
     <title>cubegame</title>
     <link rel="icon" href="main/favicon.png">
+    <link rel="stylesheet" href="main/index.css">
     <script src="util/loader.js"></script>
     <script>
         (async () => {
